--- a/projects/03_deep_learning/transformers/transformer_imdb.ipynb
+++ b/projects/03_deep_learning/transformers/transformer_imdb.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyMTgafgYS3s9f2SsMKgfMk8",
+      "authorship_tag": "ABX9TyPEFsvUguOfXlfaJTXH0PeI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -40,7 +40,7 @@
         "id": "C6V0ZFlACA8x",
         "outputId": "12f138ce-775e-4ed4-ab10-f74124c375db"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -135,7 +135,7 @@
       "metadata": {
         "id": "z5tDRmU7A-TC"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -163,7 +163,7 @@
       "metadata": {
         "id": "5KmeSJiaA_h8"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -197,7 +197,7 @@
       "metadata": {
         "id": "VU3TOi7PBB9G"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -222,7 +222,7 @@
       "metadata": {
         "id": "0b-LmggeCMuu"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -254,7 +254,7 @@
       "metadata": {
         "id": "mOc3r4WlBEZm"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -283,7 +283,58 @@
       "metadata": {
         "id": "Ls6QpKpPBHdb"
       },
-      "execution_count": 14,
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Veri yükleme ve ön işleme\n",
+        "dataset = load_dataset(\"imdb\")\n",
+        "tokenizer = BertTokenizer.from_pretrained(\"bert-base-uncased\")\n",
+        "\n",
+        "def preprocess(examples):\n",
+        "    return tokenizer(examples['text'], padding='max_length', truncation=True, max_length=128)\n",
+        "\n",
+        "tokenized = dataset.map(preprocess, batched=True)\n",
+        "tokenized.set_format(type='torch', columns=['input_ids', 'attention_mask', 'label'])\n",
+        "\n",
+        "train_dataset = tokenized['train'].shuffle(seed=42).select(range(1000))\n",
+        "test_dataset  = tokenized['test'].shuffle(seed=42).select(range(200))\n",
+        "\n",
+        "train_loader = DataLoader(train_dataset, batch_size=32, shuffle=True)\n",
+        "test_loader  = DataLoader(test_dataset, batch_size=32)\n",
+        "\n",
+        "# Model, optimizer ve loss tanımı\n",
+        "vocab_size = tokenizer.vocab_size\n",
+        "model = SimpleTransformer(vocab_size, d_model=128, num_heads=8, d_ff=256, num_layers=2, num_classes=2).to(device)\n",
+        "optimizer = torch.optim.Adam(model.parameters(), lr=1e-3)\n",
+        "criterion = nn.CrossEntropyLoss()\n",
+        "\n",
+        "# Eğitim döngüsü\n",
+        "epochs = 3\n",
+        "for epoch in range(epochs):\n",
+        "    model.train()\n",
+        "    total_loss = 0\n",
+        "    for batch in train_loader:\n",
+        "        inputs = batch['input_ids'].to(device)\n",
+        "        masks  = batch['attention_mask'].to(device)\n",
+        "        labels = batch['label'].to(device)\n",
+        "\n",
+        "        optimizer.zero_grad()\n",
+        "        outputs = model(inputs, masks)\n",
+        "        loss = criterion(outputs, labels)\n",
+        "        loss.backward()\n",
+        "        optimizer.step()\n",
+        "\n",
+        "        total_loss += loss.item()\n",
+        "    avg_loss = total_loss / len(train_loader)\n",
+        "    print(f\"Epoch {epoch+1}/{epochs}, Loss: {avg_loss:.4f}\")\n"
+      ],
+      "metadata": {
+        "id": "h6ZssbiPE3_7"
+      },
+      "execution_count": null,
       "outputs": []
     }
   ]
